// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Hook Form Input should render correctly with as with component 1`] = `
<DocumentFragment>
  <input
    value=""
  />
</DocumentFragment>
`;

exports[`React Hook Form Input should render correctly with as with string 1`] = `
<DocumentFragment>
  <input
    value=""
  />
</DocumentFragment>
`;

exports[`React Hook Form Input should support custom value name 1`] = `
<DocumentFragment>
  <input
    value=""
  />
</DocumentFragment>
`;

exports[`React Hook Form Input should support default value from hook form 1`] = `
<DocumentFragment>
  <input
    value="data"
  />
</DocumentFragment>
`;
